// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayAudioForm > render > should render 1`] = `ShallowWrapper {}`;

exports[`PlayAudioForm > updates > should allow switching from router 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "audio_url": "@flow.recording",
        "type": "play_audio",
        "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`PlayAudioForm > updates > should save changes 1`] = `
{
  "audio": {
    "validationFailures": [],
    "value": "@flow.recording",
  },
  "valid": true,
}
`;

exports[`PlayAudioForm > updates > should save changes 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "audio_url": "@flow.recording",
        "type": "play_audio",
        "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
